--- a/README
+++ b/README
@@ -3,3 +3,13 @@
 Distributed social post bin
 
 A networked place to store posted web documents. This is meant to allow for distributed social commentary and reaction around these documents using best practices recommended or noted by the W3C Social Web Working Group.
+
+## Usage
+
+### Starting the Process
+
+[ ] TODO - make the process
+
+### Interacting with a running distbin
+
+Create a Post `./bin/create-post`
