Use Cases and more precise description in README

--- a/README
+++ b/README
@@ -1,8 +1,14 @@
 # distbin
 
-Distributed social post bin
+Post bin with distributed social features.
 
 A networked place to store posted web documents. This is meant to allow for distributed social commentary and reaction around these documents using best practices recommended or noted by the W3C Social Web Working Group.
+
+## Use Cases
+
+* Wrote a poem but too embarassed to attach your name? Don't worry. Post it here!
+* Want to reply to a thought somewhere on the web, but that place doesn't have a comment system and you don't want to set up a blog or give your information to another organization? Post it here! Your Post can have an in-reply-to relation to another web resource.
+* Want to fact-check a selection of text somewhere on the web, but don't have a place to do it? Post it here! Your post can be an annotation of another web resource.
 
 ## Usage
 
